# ccs-extract

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  australian_merchants.py  ccs_extract.py  compose.yaml  config.py  create_test_pdf.py  docker-compose.yml  exceptions.py  logger.py  parsing_patterns.json.example  pyproject.toml  requirements.txt  run_tests.sh  setup.py  setup.sh  test_ccs_extract.py  test_config.json  test_transaction_rules.py  transaction_categories.py  transaction_config.example.json  transaction_config.template.json  transaction_rules.json  transaction_rules.py
.github/workflows/: code-quality.yml  coverage.yml  docker.yml  security.yml
